--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="2dp"
                     android:layout_weight="0.2"
-                    android:hint="Height"
+                    android:hint="Height(cm)"
                     android:weightSum="0.3">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -60,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="2dp"
                     android:layout_weight="0.2"
-                    android:hint="Weight"
+                    android:hint="Weight(kg)"
                     android:weightSum="0.3">
 
                     <com.google.android.material.textfield.TextInputEditText
